Changes to Version 2.0-16

    o linearHypothesisTest() now tolerates newlines and tabs in hypotheses (suggestion of David Hugh-Jones).

    o two bugs fixed in Boot() (found by David Pain) changed argument f to f. in bootCase().

    o summary.Boot, confint.Boot and hist.Boot handle aliases correctly.

    o Boxplot.formula() now accepts more than one conditioning variable (suggestion of Christina Yassouridis).

    o Small fixes.

Changes to Version 2.0-15

    o Added an argument coef. to linearHypothesis so tests of the linear hypohtesis form can be computed without reference to a fitted model

    o Added a linearHypothesis.nlsList method
    
    o Added an nls method for Boot

    o Recode() introduced as alias for recode() to avoid name clash with Hmisc.

    o residualPlots for glms now ignore starting values for the computing algorithm when computing lack of fit tests; starting values previously caused an error.

    o Marginal Model Plots now allow conditioning on a categorical variable.

Changes to Version 2.0-14

    o Smoothers now given as arguments to scatterplot(), scatterplotMatrix(), residualPlots() and other functions; gamLine(), loessLine() (default), and quantregLine() smoothers provided.

    o linearHypothesis.mer() and Anova.mer() now consistent with pbkrtest version 0.3-2.

    o Small changes and fixes.

Changes to Version 2.0-13

    o Added point marking (id.n, etc.) to dataEllipse

    o Changed the default for id.method with the invTranPlot to "x".
    
    o The ncvTest has been rewritten for stability, and unneeded 'data', 'subset' and 'na.action' argument have been removed

    o Added new function 'Boot' that is a simple front-end to boot::boot that will be useful when bootstrapping regression models.  Implemented for lm and glm, but this is likely to work for many other S3 regression models with and 'update' method, 'subset' argument.
    
    o Fixed bug in 'compareCoefs' with non-full rank models
    